# libpixel

./: CMakeLists.txt  README.md
include/pixel/: ImageWriter.h  RgbaColor.h  RgbaImage.h
src/: CMakeLists.txt  ImageWriter.cpp  RgbaColor.cpp  RgbaImage.cpp  stb_impl.cpp
